--- a/lekcii/algorythmes.tex
+++ b/lekcii/algorythmes.tex
@@ -127,7 +127,7 @@
 
 \newpage
 
-\section{Лекция 1.}
+\section{Лекция 2.}
 
 \subsection{Быстрая сортировка.}
 
@@ -210,7 +210,7 @@
     Пусть стержень длины 0 не стоит нисколько. Для $j$ от 1 до $n$ пока не найдено никаких способов продать стержень, для всякой длины отрезаемого куска, сложим его цену с выручкой за остаток. Если так можно выручить больше известного, то цена стержня длины $j$ улучшается, и так рекурсивно мы дойдём до получения цены за весь стержень. 
 \end{exl}
 
-\section{Лекция 2.}
+\section{Лекция 3.}
 
 \subsection{Продолжение динамического программирования.}
 
@@ -301,7 +301,7 @@
     Если в ациклическом графе есть дуга $(u, v)$, то время завершения $v$ ментше, чем время завершения $u$. 
 \end{stat}
 
-\section{Лекция 3.}
+\section{Лекция 4.}
 
 \subsection{Окончание поисков в орграфе.}
 
@@ -356,7 +356,7 @@
 \end{proof}
 
 \begin{alg}
-    Алгоритм Дейкстры. Этот алгоритм решает ту же задачу, однако на каждом шаге находит очередную вершину $u$, путь наименьшего веса в которую уже известен. Тогда плгоритм рассматривает все дуги, исходящие из вершины $u$. Это позволяет ему рассматривать каждую дугу графа лишь однажды.
+    \textbf{Алгоритм Дейкстры.} Этот алгоритм решает ту же задачу, однако на каждом шаге находит очередную вершину $u$, путь наименьшего веса в которую уже известен. Тогда плгоритм рассматривает все дуги, исходящие из вершины $u$. Это позволяет ему рассматривать каждую дугу графа лишь однажды.
 \end{alg} \
 
 \begin{theorem}
@@ -498,5 +498,97 @@
 \begin{alg}
     Алгоритм пишется через представление компонент связности в виде структуры данных для непересекающихся множеств.
 \end{alg}
+
+\section{Лекция 5.}
+
+\subsection{Пути между всеми парами вершин.}
+
+\begin{prob}
+    Дан ориентированный граф $G=(V, E)$, где $V = \{1, \ldots, n\}$, а $E\subseteq V \times V$. Стваится задача проверить чуществование пути из каждой вершины в каждую - то есть: для каждой пары вершин $(i, j)$ определить, есть ли путь из $i$ в $j$. После решения мы получим \textit{транзитивное замыкание} графа.
+\end{prob}
+
+\begin{alg}
+    \textbf{Очевидный алгоритм.} Перебираем все пары вершин $(i, j)$ и для каждой пары все промежуточные вершины $k$. Если она соединена с обоими, то добавляем ребро $(i, j)$. Делаем так пока можем.
+\end{alg}
+
+\begin{stat}
+    После каждой $t$-ой итерации внешнего цикла будут просчитаны все пути длины не более $2^t$, и для каждого из них в граф будет добавлена дуга. Откуда время работы - не более, чем $n^3 \log_2 n$ шагов.
+\end{stat}
+
+\begin{alg}
+    \textbf{Алгоритм Варшалла.} Можно построить транзитивное замыкание за время $n^3$, обойдясь без внешнего цикла (без пока можем). Для этого достаточно поменять циклы местами и теперь рассматривать каждую вершину как смежную, соединяя все пары, смежные с ней.
+\end{alg}
+
+\begin{stat}
+    После $k$-ой итерации внешнего цикла найдены все пути, проходящие только через промежуточные вершины из множества $\{1, \ldots, k\}$. 
+\end{stat}
+
+\begin{proof}
+    Доказательство индукцией по количеству итераций.
+\end{proof}
+
+\begin{prob}
+    Пусть граф теперь не только ориентированный, но и рёбра имеют вес. Нужно найти кратчайшие пути между вершинами.
+\end{prob}
+
+\begin{alg}
+    \textbf{Алгоритм Флойда-Варшалла.} То же самое, что и алгоритм варшала, но мы ещё и храним вес рёбер.
+\end{alg}
+
+\begin{remark}
+    О достижимости можно говорит в рамках матриц смежности. Умножение рассматривается как 
+    \[
+        c_{i, j}=\bigvee_{k=1}^l a_{i, k}\wedge b_{k, l}. 
+    \]
+    Тогда если $A$ - матрица смежности, то $A^l$ - матрица достижимости по путям длины ровно $l$. 
+\end{remark}
+
+\subsection{Быстрое умножение матриц.}
+
+Ну, какие-то способы усножения - ебанина какая-то, писать не буду.
+
+\begin{theorem}
+    (\textbf{Основная теорема о времени работы рекурсивных алгоритмов}). Пусть задача размера $n$ рашается путём разбиения её на $a$ подзадач того же типа, размера $\frac{n}{b}$ каждая, и процесс разбиения, а также соединения результатов занимает время $O(n^c)$. 
+    \[
+        T(n)=aT(\frac{n}{b})+O(n^c)
+    \]
+    Тогда время работы алгоритма оценивается как
+
+    \begin{itemize}
+        \item Если $c<\log_b a$, то $O(n^{\log_b a})$;
+        \item Если $c=\log_b a$, то $O(n^c \log_b n )$; 
+        \item Если $c>\log_b a$. то $(n^c)$. 
+    \end{itemize}
+\end{theorem}
+
+\begin{proof}
+    В дереве рекурсии $\lceil \log_b n \rceil$ уровней, на нулевом - одна подзадача размера $n$, рассчёты занимают время $n^c$, на первом - $a$ подзадач размера $\lceil \frac{n}{b} \rceil$, расчёты для каждой занимают врем] $\lceil \frac{n}{b} \rceil^c$, и так далее, на уровне $i$ - а подзадач размера $\lceil \frac{n}{b^i}\rceil$ каждая, расчёты каждой занимают время $\lceil \frac{n}{b^i}\rceil^c$. Общее время работа - сумма по всем уровням рекурсии.
+    \[
+        T(n)= \sum_{i=0}^{\lceil \log_b n \rceil} a^i\biggl(\frac{n}{b^i}\biggr)^c=n^c \sum_{i=0}^{\lceil \log_b n \rceil} \biggl(\frac{a}{b^c}\biggr)^i
+    \] 
+    Таким образом, если $a=b^c$, то сумма геометрической прогрессии - $\log_b^n$, и отсюда $O(n^c\log_b n)$. Если $a<b^c$, то сумма ограничена сверху константой, отсюда $O(n^c)$. И если $a>b^c$, то это возрастающая геометрическая прогрессия, и применив формулу для вычисления получим $O(n^{\log_b a})$. 
+\end{proof}
+
+\begin{prob}
+    Умножение булевых матриц.
+\end{prob}
+
+\begin{alg}
+    Можно записать матрицу в виде кучи нулейи единиц, после чего перемножить в кольце вычетов по модулю $n+1$ или по любому удобному модулю, превосходящему $n$. Тогда вместо дизъюнкции конъюнкций будет вычислена сумма произведений по модулю $n+1$ (в точности равная оличества интинных конъюнкций в дизъюнкции конъюнкций, и потому она лежит в диапазоне от 0 до $n$, откуда следует, что по модулю $n+1$ она вычислится точно). Чтобы узнать значение дизъюнкции конъюнкций, достаточно будет проверить вычисленную сумму на равенство нулю.
+\end{alg} \ 
+
+\begin{alg}
+    \textbf{Метод четырёх русских.} Чисто комбинаторный метод умножения булевых матриц за время $o(n^3)$. Пусть $A$ и $B$ - две булевых матрицы размера $n\times n$, цель - вычислить их произведение $C=AB$. Пусть $k$ - число, намного меньшее, чем $\log_2 n$, и пусть $n$ делится на $k$ (если не делится - немного увеличим $n$ до делимости). Каждая строка матрицы $A$ делится на $\frac{n}{k}$ векторов размера $1\times k$, называемых \textit{кусочками}. Кусочки в $i$-ой строке обозначаются через $A_{i, l}, \ldots, A_{i, \frac{n}{k}}\in \mathbb{B}^{1\times k}$. Матрица $B$ разделяется на $\frac{n}{k}$ подматриц размера $k\times n$, называемых \textit{полосами} и обохначаемыми через $B_1, \ldots, B_{\frac{n}{k}}\in \mathbb{B}^{1\times k}$. Тогда всякая $i$-ая строка $C$, обозначаемая через $C_i\in \mathbb{B}^{1\times n}$, представима в виде следующей поэлементной дизъюнкции строк:
+    \[
+        C_i=\bigvee_{r=1}^{\frac{n}{k}}A_{i, r}B_r. 
+    \]
+    Произведение кусочка $A_{i, r}$ на соответствующую полосу $B_r$ - это строка размера $1\times n$, и знак дизъюнкуции в формуле для $C_i$ означает поразрядную дизъюнкцию таких строк,
+\end{alg}
+
+\begin{remark}
+    Казалось бы, никакого принципиального улучшения не получилось, однако с программистсткой точки зрения, это в чём-то удобнее. \ 
+
+    Главная идея метода же состоит в том, что так как $k$ невелико, возможных кусочков всего $2^k$, и кусочки будут часто повторяться. Таким образом, если запомнить произведения таких кусочков на полосы $B$, в плане вычислений это займёт много меньше времени. Общее время работы будет $O\biggl(\frac{n^3}{\log n}\biggr)$. 
+\end{remark}
 
 \end{document}
