--- a/lekcii/algorythmes.tex
+++ b/lekcii/algorythmes.tex
@@ -19,7 +19,7 @@
      linkcolor=magenta,
      filecolor=magenta,
      citecolor=black,      
-     urlcolor=cyan,
+     urlcolor=magenta,
      }
 \usepackage{fancyhdr}
 \pagestyle{fancy} 
@@ -121,6 +121,8 @@
 \maketitle 
 
 \newpage
+
+\url{https://users.math-cs.spbu.ru/~okhotin/teaching/algorithms_2020/} - источник с конспектами А. С. Охотина, где всё в тысячу раз подробнее и грамотнее. \\
 
 \hypertarget{t1}{Основные моменты}. 
 \tableofcontents
@@ -590,5 +592,69 @@
 
     Главная идея метода же состоит в том, что так как $k$ невелико, возможных кусочков всего $2^k$, и кусочки будут часто повторяться. Таким образом, если запомнить произведения таких кусочков на полосы $B$, в плане вычислений это займёт много меньше времени. Общее время работы будет $O\biggl(\frac{n^3}{\log n}\biggr)$. 
 \end{remark}
+
+\section{Лекция 6.}
+
+\subsection{Двоичные деревья поиска}
+
+Речь сейчас пойдёт о структурах данных для представления \textit{множества} различными способами, с разными временем выполнения операций (строго говоря, мы будем говорить о \textit{мультимножестве}, так как может быть несолько элементов с одинаковым значением). Элементы погут быть любого вида, на них определено отношение порядка $''\leq''$. Операции: найти элемент с данным значением; найти наибольший (наименьший) элемент; найти элемент, предшествующий или следующий за данным; вставить / удалить элемент. \\
+
+\begin{alg}
+    \textbf{Бинарное дерево поиска.} Представление мнлжества в виде дерева так, что вершина содержит одно значение и три указателя: на предка (если корень, то NULL), на левое поддерево и на правое (если их нет, то NULL). При этом все вершины в её левом поддереве содержат не меньшие значения, а все вершины в правом поддереве - не бóльшие. Понятно, как на таком дереве задаются требуемые операции.
+\end{alg}
+
+\begin{remark}
+    Сложность каждой операции - не более, чем высота дерева. Если дерево сбалансированное, то есть, все пути примерно одинаковой длины, то все операции выполняются за логарифмическое время.
+\end{remark}
+
+\begin{prob}
+    Даже если дерево сбалансированное, то операции над ним могут првести его к дизбалансу, надо как-то сложниить структуру, чтобы избежать критических изменений.
+\end{prob}
+
+\begin{alg}
+    \textbf{АВЛ-деревья.} Усложнённая разновидность двоичных деревьев поиска. Такую разновидность называют \textit{почти сбалансированной}, то есть, высота деревьев-потомков одной вершины отличается не более, чем на 1. Этого ограничения достаточно, чтобы дерево мело логарифмическую высоту.
+\end{alg}
+
+\begin{stat}
+    АВЛ-дерево высоты $h$ содержит не менее, чем $F_{h+3}-1$ вершин, где $F_n$ - $n$-ое число Фибоначчи.
+\end{stat}
+
+\begin{proof}
+    Индукция по $h$. База очевидна, переход таков. Если дерево имело высоту $h$, то один из его потомков имеет высоту $h-1$, а другой - высоту не менее, чем $h-2$, то есть, не менее чем $F_{h+2}-1$ и $F_{h+1}-1$ вершин соответственно. Всего, с учётом корня и по определению чисел Фибоначчи, как раз и получится то, что нужно.
+\end{proof}
+
+\begin{stat}
+    Высота АВЛ-дерева с $n$ вершинами не превосходит $\log_\varphi n$, где $\varphi$ - золотое сечение.
+\end{stat}
+
+\begin{remark}
+    Естественно, просто так АВЛ-дерево не получить, поэтому придумана операция \textit{вращение}, которая состоит в том, что если у нас есть корень $y$, из которого направо идёт поддерево $t_3$, а налево - поддерево с корнем $x$ и поддеревьями $t_1$ и $t_2$ налево и направо соответственно. Тогда мы подвешиваем дерево за $x$ и перебрасываем его поддерево $t_2$ в левое поддерево $y$. При помощи такой операции можно исправить балансировку при различных операциях, подробно расписывать я это пока что не буду.
+\end{remark}
+
+\begin{prob}
+    Двоичные деревья рассчитаны на то, чтобы храниться в оперативной памяти компьютера, а для того, чтобы хранить деревья во внешней, медленной памяти, требуется некая адаптация.
+\end{prob}
+
+\subsection{B-деревья.}
+
+\begin{alg}
+    \textbf{B-деревья}. Адаптация деревьев поиска для хранения во внешней памяти. Основная мысль - использовать вершины большой степени - с тем, чтобы каждая вершина занимала один блок, а высота дерева уменьшилась бы. \ 
+
+    Пусть вершины в двоичном дереве - это 2-вершины, поскольку у каждой из них 2 потомка и 1 значение, по которому эти потомки разделяются. У $m$-вершины - $m$ потомков (деревья $t_1, \ldots, t_m$ - возможно, пустые), и в ней находится $m-1$ значение: $x_1, \ldots, x_{m-1}$, где значения упорядочены по неубыванию. Все значения в каждом поддереве $t_i$, больше или равны $x_i$, и меньше или равны $x_{i+1}$. \ 
+
+    В B-дереве могут одновременно соержаться вершины различных степеней: выбирается некоторое число $k\geq 2$, после чего корень может иметь степень от 0 до $2k$, а все остальные вершины - любые степени от $k$ до $2k$. При этом, дерево сбалансировано.
+\end{alg}
+
+\begin{remark}
+    То, как производятся требуемые операции - лучше один раз увидеть и немного прочитать в конспекте А. С. Охотина, чем читать мои заметки.
+\end{remark}
+
+\begin{alg}
+    B-дерево для $k=2$ называется $2-3-4$ деревом, и такое дерево очень удобно хранить в оперативной памяти. 
+\end{alg} \ 
+
+\begin{alg}
+    Красно-чёрное дерево - это представление 2-3-4 дерева в виде двоичного дерева, в котором каждая вершина представлена в виде одной или несколькиз связанных между собою двоичных вершин, каждая из которых покрашена в один из двух цветом. Каждая 2-вершина остаётся собой и считается чёрной. Каждая 3-вершина разбивается на две двоичных: чёрную - корень поддерева, и красныю вершину - правого или левого потомка чёрной. Далее - к этой паре вершин, так же как и к исходной 3-вершине, присоединяются три поддерева. Наконец, каждая 4-вершина разбивается на три двоичных - чёрную и два красных потомка, к которым присоединены четыре поддерева.
+\end{alg}
 
 \end{document}
