matan-10-s-gorem-popolam

--- a/lekcii/mathanalys.tex
+++ b/lekcii/mathanalys.tex
@@ -733,6 +733,56 @@ $f\in C^1$, $f'(x)=-\frac{F'_x(x, f(x))}{F_y'(x, f(x))}$.
     $f'(x)=-[f_y'(x, f(x))]^{-1}\cdot F_x'(x, f(x))$. 
 \end{theorem}
 
+\section{Лекция 10.}
+
+Продолжаем изучение теоремы о неявной функции.
+
+\begin{theorem}
+    Пусть $x\in \RR^m$, $y\in \RR^n$, $F:G\rightarrow \RR^n$, $G\subset \RR^{m_1}$. Тогда если
+
+    \begin{itemize}
+        \item $F\in C^1(G)$; 
+        \item $F(x^0, y^0)=0$; 
+        \item $F'(x^0, y^0)$ - обратимо ($n\times n$ - матрица).
+    \end{itemize}
+
+    Тогда в некоторой окрестности $(x^0, y^0)$, $F(x, y)=0$ тогда и только тогда, когда $y=f(x)$, $f:\RR^m\rightarrow \RR^n$. 
+\end{theorem}
+
+\begin{proof}
+    $f'(x)=-(F'_y(x, f(x)))^{-1}F'_x(x, f(x))$. В правой части как раз матрицы $n\times n$ и $n\times m$. \ 
+
+    Мы сейчас находимся в положении, что если $n=1$, то теорема доказана (на прошлой лекции). Докажем теперь всё остальное индукцией по $n$. Попробуем уменьшить на 1 число переменных. Мы знаем, что $F=(F_1, \ldots, F_n)$, $F_k:\RR^{m+1}\rightarrow \RR$. $F_k = F_k(x^1, \ldots, x^m, y^1, \ldots, y^n)$, и эта вещь равна нулю из кучи соотношений. Нам хочется выделить одну переменную и посмотреть на это как на неявное соотношение между игреками и иксами. Попытаемся зафиксировать всю совокупность переменных, кроме одной, и, как раз, получится то, что надо. \ 
+    
+    Обозначим цель: выразить игреки через иксы, то есть найти $y^i=f_i(x_1, \ldots, x_m)$. Начинаем с малого, и выразим одну через все остальные. Выбирать мы будет не абы какую переменную. $F'_y$ можно записать как матрицу Якоби. Поскольку мы знаем, что эта матрица невырожденная, то у неё есть хотя бы одна ненулевая строка, у которой есть ненулевой элемент. Не умаляя общности, это - последняя строка и последний в ней элемент. $\frac{\partial F_n}{\partial y_n}(x^0, y^0)\neq 0$ (даже в некоторой окрестности). $y_n$ мы выражать и будем. \ 
+
+    Применим теперь теорему о неявной функции в случае с одной переменной, и тогда $F_k(x_1, \ldots, x_m, y_1, \ldots, y_{n-1}) = 0$, $1\leq k\leq n$, у нас есть столько соотношений, и нам бы хотелось их записать в виде того, что $y_n$ является функцией от остальных переменных. Чтобы это сделать, нам достаточно только одного. Количество соотношений должно быть равно количеству переменных, поэтому нас из всех этих соотношений нужно только последнее - $n$-ое. У нас есть от него начальный вектор длины $M+n-1$. Подставим 
+    \[
+        F_n(x_1^0, \ldots, x_m^0, y_1^0, \ldots, y_{n-1}^0, y_n^0) = 0,
+    \]    
+    это нам дано. \ 
+
+    Тогда согласно теореме, у нас существует $f^*$ такая, что $y_n=f^*(x_1, \ldots, x_m, y_1, \ldots, y_{n-1})$. У этой формулы есть, конечно, одна беда, было бы совсем круто, если бы мы выразили это всё только через иксы, а тут ещё куча игреков. Но тогда спустимся индукцией вниз, и дойдём до того, что как раз останутся только иксы. Однако, тут нужно следить за многими важными моментами, например, за невырожденностью матриц. Заведём следующую функцию: $\varphi_1 = F_1(x_1, \ldots, x_m, y_1, \ldots, y_{n-1}, f^*(x_1, \ldots, x_m, y_1, \ldots, y_{n-1}))$. Точно также мы можем сделать для $1\leq k\leq n-1$. Тогда $\varphi_n \equiv 0$. \ 
+
+    $\varphi_k(x_1, \ldots, x_m, y_1, \ldots, y_{n-1})=0$, $1\leq k\leq n-1$. Нам нужно проверить, что матрица отображения $\varphi=(\varphi_1, \ldots, \varphi_{n-1})$ невырожденна в точке. Тогда нам ещё нужно научиться считать производные $\varphi_k$ по игреку. Попытаемся продифференцировать $\frac{\partial \varphi_k}{\partial y_l}$, где и $k$ и $l$ - от 1 до $n-1$. Эта производная равна $\frac{\partial F_k}{\partial y_l}+\frac{\partial F_k}{\partial y_n}\cdot \frac{\partial f^*}{\partial y_l}$, в $f^*$ мы подставляем всё, кроме последней координаты, а в $F$ подставляем всё, да на месте последней координаты - $f^*$ от всего остального. \ 
+
+    Рассмотрим, что у нас получается с матрицей $\frac{\partial \varphi_k}{\partial y_l}$, $(n-1)\times (n-1)$ (точнее, рассматриваем $\frac{\partial F_k}{\partial y_l}$ и размера $n\times n$). Рассматриваем теперь верхнюю левую подматрицу $(n-1)\times(n-1)$, а из большой получим при помощи элементарных преобразований получим красивую большую матрицу, которая состоит из элементов, идентичных $\frac{\partial F_k}{\partial y_l}+\frac{\partial F_k}{\partial y_n}\cdot \frac{\partial f^*}{\partial y_l}$. Внутри того куска $(n-1)\times (n-1)$ получим красоту ($\varphi'_y$), однако в последнем столбце у нас получается что-то не хорошее ($\frac{\partial F_n}{\partial y_1}+\frac{\partial F_n}{\partial y_n}\cdot \frac{\partial f^*}{\partial y_1}$, однако, так как это производные, то тождественные нули). Аналогично не очень хорошо получается в последней строке, а в правом нижнем углу стоит $\frac{\partial F_n}{\partial y_n}$. \ 
+
+    Тогда определитель матрицы $F'_y=\det \varphi'_y \cdot \frac{\partial F_n}{\partial y_n}$. Но ни первый, ни второй множитель не равняются нулю, поэтому и искомое не нуль.  $\varphi_i(\text{everything})=0$, тогда существуют $f_k$, $1\leq k\leq n-1$, тогда $y_n=f^*(x_1, \ldots, x_m, y_1, \ldots, y_{n-1})=f^*(x_1, \ldots, x_m, f_1(\text{x's}), \ldots, f_{n-1}(\text{x's}))))$. \ 
+
+    Осталось лишь доказать формулы $f'(x)$, $f:\RR^m \rightarrow \RR^n$. У нас есть соотношение 
+    \[
+        F_k(x_1, \ldots, x_m, f_1, \ldots, f_n)=0, 
+    \] 
+    $1\leq k\leq n$. Давайте продифференцируем это дело. Мы имеем право дифференуировать по $m$ переменным. $\frac{\partial F_k}{\partial x_1}= \frac{\partial F_k}{\partial x_1} + \sum_{l=1}^n\frac{\partial F_k}{\partial y_l}\cdot \frac{\partial f_l}{\partial x_1}=0$. Индексы при $F$ и $x$ могут быть любыми, тогда мы можем 1 заменить на $s$, и у нас выполнено $m\times n$ соотношений ($1\leq k \leq n$, $1\leq s\leq m$). $F'_x+F_y'f'=0$, тогда посмотрим на рзмеры матриц, и пристальным вглядыванием получим из обратимости $f'=-(F_y')^{-1}\cdot F_x'$. (немного перестал понимать, что происходит - надо вникнуть и записать).
+\end{proof}
+
+Перейдём теперь к теме \textit{условные экстремумы}. Пусть $f=f(x_2, \ldots, x_n)$, $G\subset \RR^n$, $F\rightarrow \RR$. Если у нас есть набор $f_i(x_1, \ldots, x_n)=0$ при $1\leq i\leq m$, то хотелось бы, чтобы $m\leq n$. Тогда мы можем сократить количество переменных. Ну, Юрий Сергеевич начал рисовать картиночки, я так не умею. Пусть у нас есть поверхность $S$ и $f(x,y,z)$, и мы хотим найти экстремум по $S$ - $f|_S$. Пусть у нас есть точка $(x_0, y_0, z_0)\in S$, тогда мы хотим, чтобы в точке было касание.
+
+
+
+
+
 
 \newpage
 
@@ -856,5 +906,7 @@ $f\in C^1$, $f'(x)=-\frac{F'_x(x, f(x))}{F_y'(x, f(x))}$.
       df(x)h=\frac{\partial f}{\partial x_1}(x)h_1+\ldots+\frac{\partial f}{\partial x_m}(x)h_m. 
     \]
   \end{theorem}
+
+
 
 \end{document}
