--- a/lekcii/mathlogic.tex
+++ b/lekcii/mathlogic.tex
@@ -34,7 +34,7 @@
 %\geometry{verbose,a4paper,tmargin=2cm,bmargin=2cm,lmargin=2.5cm,rmargin=1.5cm}
 
 \title{Матлог. Основные записи}
-\author{Мастера конспектов \\ на основе лекций С. О. Сперанского}
+\author{Кабашный Иван (@keba4ok) \\ на основе лекций С. О. Сперанского}
 \date{22 января 2020 г.}
 
 \theoremstyle{indented}
