--- a/lekcii/mathanalys.tex
+++ b/lekcii/mathanalys.tex
@@ -34,7 +34,7 @@
 %\geometry{verbose,a4paper,tmargin=2cm,bmargin=2cm,lmargin=2.5cm,rmargin=1.5cm}
 
 \title{Матанализ. Конспект 2 сем.}
-\author{Мастера Конспектов\\ \\ (по материалам лекций Белова Ю. С.,\\ а также других источников)}
+\author{Кабашный Иван (@keba4ok)\\ \\ (по материалам лекций Белова Ю. С.,\\ а также других источников)}
 \date{16 февраля 2021 г.}
 
 \theoremstyle{indented}
@@ -777,10 +777,7 @@ $f\in C^1$, $f'(x)=-\frac{F'_x(x, f(x))}{F_y'(x, f(x))}$.
     $1\leq k\leq n$. Давайте продифференцируем это дело. Мы имеем право дифференуировать по $m$ переменным. $\frac{\partial F_k}{\partial x_1}= \frac{\partial F_k}{\partial x_1} + \sum_{l=1}^n\frac{\partial F_k}{\partial y_l}\cdot \frac{\partial f_l}{\partial x_1}=0$. Индексы при $F$ и $x$ могут быть любыми, тогда мы можем 1 заменить на $s$, и у нас выполнено $m\times n$ соотношений ($1\leq k \leq n$, $1\leq s\leq m$). $F'_x+F_y'f'=0$, тогда посмотрим на рзмеры матриц, и пристальным вглядыванием получим из обратимости $f'=-(F_y')^{-1}\cdot F_x'$. (немного перестал понимать, что происходит - надо вникнуть и записать).
 \end{proof}
 
-Перейдём теперь к теме \textit{условные экстремумы}. Пусть $f=f(x_2, \ldots, x_n)$, $G\subset \RR^n$, $F\rightarrow \RR$. Если у нас есть набор $f_i(x_1, \ldots, x_n)=0$ при $1\leq i\leq m$, то хотелось бы, чтобы $m\leq n$. Тогда мы можем сократить количество переменных. Ну, Юрий Сергеевич начал рисовать картиночки, я так не умею. Пусть у нас есть поверхность $S$ и $f(x,y,z)$, и мы хотим найти экстремум по $S$ - $f|_S$. Пусть у нас есть точка $(x_0, y_0, z_0)\in S$, тогда мы хотим, чтобы в точке было касание.
-
-
-
+Перейдём теперь к теме \textit{условные экстремумы}. Пусть $f=f(x_2, \ldots, x_n)$, $G\subset \RR^n$, $F\rightarrow \RR$. Если у нас есть набор $f_i(x_1, \ldots, x_n)=0$ при $1\leq i\leq m$, то хотелось бы, чтобы $m\leq n$. Тогда мы можем сократить количество переменных. Ну, Юрий Сергеевич начал рисовать картиночки, я так не умею. Пусть у нас есть поверхность $S$ и $f(x,y,z)$, и мы хотим найти экстремум по $S$ - $f|_S$. Пусть у нас есть точка $(x_0, y_0, z_0)\in S$, тогда мы хотим, чтобы в точке было касание. Если в общем и целом, то нас инетересует касание, мы рассматриваем параметризацию от одной переменной $t$ по кривой на поверхности, и дальше с ней чего-то там делаем.
 
 
 
