--- a/lekcii/algebra_2.tex
+++ b/lekcii/algebra_2.tex
@@ -35,7 +35,7 @@
 %\geometry{verbose,a4paper,tmargin=2cm,bmargin=2cm,lmargin=2.5cm,rmargin=1.5cm}
 
 \title{Алгебра. Конспект 2 сем.}
-\author{Мастера Конспектов\\ \\ (по материалам лекций В. А. Петрова,\\ а также других источников)}
+\author{Кабашный Иван (@keba4ok)\\ \\ (по материалам лекций В. А. Петрова,\\ а также других источников)}
 \date{12 февраля 2021 г.}
 
 \theoremstyle{indented}
