--- a/lekcii/probtheory.tex
+++ b/lekcii/probtheory.tex
@@ -34,7 +34,7 @@
 %\geometry{verbose,a4paper,tmargin=2cm,bmargin=2cm,lmargin=2.5cm,rmargin=1.5cm}
 
 \title{Теория вероятностей. Конспект 2 сем.}
-\author{Мастера Конспектов\\ \\ (по материалам лекций Давыдова Ю. А.,\\ а также других источников)}
+\author{Кабашный Иван (@keba4ok)\\ \\ (по материалам лекций Давыдова Ю. А.,\\ а также других источников)}
 \date{16 февраля 2021 г.}
 
 \theoremstyle{indented}
