--- a/lekcii/algorythmes.tex
+++ b/lekcii/algorythmes.tex
@@ -32,7 +32,7 @@
 %\geometry{verbose,a4paper,tmargin=2cm,bmargin=2cm,lmargin=2.5cm,rmargin=1.5cm}
 
 \title{Матосновы алгоритмов}
-\author{Мастера конспектов \\ на основе лекций А. С. Охотина и А. В. Тискина}
+\author{Кабашный Иван (@keba4ok) \\ на основе лекций А. С. Охотина и А. В. Тискина}
 \date{22 января 2020 г.}
 
 \theoremstyle{indented}
@@ -655,6 +655,158 @@
 
 \begin{alg}
     Красно-чёрное дерево - это представление 2-3-4 дерева в виде двоичного дерева, в котором каждая вершина представлена в виде одной или несколькиз связанных между собою двоичных вершин, каждая из которых покрашена в один из двух цветом. Каждая 2-вершина остаётся собой и считается чёрной. Каждая 3-вершина разбивается на две двоичных: чёрную - корень поддерева, и красныю вершину - правого или левого потомка чёрной. Далее - к этой паре вершин, так же как и к исходной 3-вершине, присоединяются три поддерева. Наконец, каждая 4-вершина разбивается на три двоичных - чёрную и два красных потомка, к которым присоединены четыре поддерева.
+\end{alg}
+
+\section{Лекция 7.}
+
+\subsection{Полиномиальное хэширование.}
+
+\begin{prob}
+    Дана длинная строка $w=a_1\ldots a_n$ и короткая искомая строка $x=b_1\ldots b_m$. Требуется найти все вхождения $x$ в $w$ в качестве подстроки.
+\end{prob}
+
+\begin{alg}
+    \textbf{Хэш-функции.} Каждой строке ставится в соответствие некоторое число $w\mapsto h(w)$, и это число хранится вместе со строкой. Тогда, если нужно сравнить две строки, то мы сравниваем сперва соответствующие им числа. Если числа разные, то и строки точно разные. Если соответствующие числа одинаковые, то надо сравнить строки и получить итоговый результат. Самое тупое - сложить коды всех символов, но тогда распределение неравномерное, и вообще это не очень кайфовый вариант. Намного лучше \textit{полиномиальное хэширование}. Берём некоторое основание степени $p$, пусть $w=a_1\ldots a_l$ - строка, тогда используется сумма $\sum_{i=1}^l a_i\cdot p^{l-i}$, взятая по некоторому модулю $M$.
+\end{alg} \
+
+\begin{alg}
+    \textbf{Алгоритм Рабина-Карпа}. Алгоритм поиска подстроки $x=b_1\ldots b_m$ в строке $w-a_1\ldots a_n$, основанный на полиномиальном хэшировании степени $m-1$: сперва вычисляется значение хэщ-функции для искомой строки, а затем для всех $m$-символьных подстрок данного текста последовательно вычисляется значение их хэш-функции. Когда значение для подстроки и искомой строки совпадают, производится прямое сравнение. Значение хэш-функции для искомой строки: $X=\sum_{i=1}^m b_i\cdot p^{m-i}$ по модулю $q$, а значение хэш-функции для подстроки со смещением $s$: $W_s=\sum_{i=1}^m a_{s+i}\cdot p^{m-1}$ по модулю $q$. Алгоритм сперва вычисляет $X$, а затем - последовательно все $W_s$. Из соотношения $W_{s+1}=pW_s-a_{s+1}p^m+a_{s+m+1}(\mod{q})$. Сложность: $\Theta(m)$ - на подготовку, и затем в худшем случае $O(mn)$, если хэ=-функция выдаст одинаковые значения для всех подстрок. В среднем случае получается время работы $\Theta(n)$. 
+\end{alg}
+
+\begin{prob}
+    (Наибольшая общая подстрока). Даны две строки: $u=a_1\ldots a_m$ и $v=b_1\ldots b_n$. Надо найти самую длинную их общую подстроку $x$. 
+\end{prob}
+
+\begin{alg}
+    Тупое решение: для каждой пары позиций найти самую длинную подстроку, время $((m+n)^3)$. 
+\end{alg} \
+
+\begin{alg}
+    Улучшение через полиномиальное хэширование - научиться отвечать на вопрос ''Есть ли общая подстрока длины $l$?'' за время $O((m+n)\log(m+n))$. Для этого находятся значения хэш-функции для всех подстрок $u$ длины $l$, размещаются в двоичном дереве поиска - время $m\log m$. То же самое - для $v$ за время $n\log n$. 
+\end{alg} \
+
+\begin{alg}
+    Улучшение через двоичный поиск по $l$. Его можно записать в виде рекурсивной процедуры, отвечающей на вопрос ''Найти длину наибольшей общей подстроки, если известно, что её длина не меньше, чем $l_1$, и строго больше, чем $l_2$?''. Процедура $f(l_1, l_2)$: если $l_2-l_1=1$, то возвращаем $l_1$, $k=\lfloor \frac{l_1+l_2}{2}\rfloor$. Теперь, если есть общая подстрока длины $k$, то возвращаем $f(k, l_2)$, иначе возвращаем $f(l_1, k)$. 
+\end{alg}
+
+\begin{prob}
+    Найти в строке самую длинную подстроку-палиндром.
+\end{prob}
+
+\begin{alg}
+    Самый тупой алгоритм: искать вокруг каждого симыола на длину вплоть до $\frac{n}{2}$, время $O(n^2)$. 
+\end{alg} \
+
+\begin{alg}
+    Улучшение основано на решении подзадачи: ''Есть ли подстрока-палиндром данной длины $l$?''. После того, как будет построен алгоритм для решения подзадачи, останется использовать двоичный поиск по $l$. 
+\end{alg} \
+
+\begin{alg}
+    Решение через небольшую переформулировку: разворачиваем строку и для таковой и оригинальной рассматриваем хэш-ффункции для всех подстрок длины $l$. После чего, естественн, надо выполнить посимвольную проверку. Двоичный поис по $l$ даст время $O(n\log n)$. 
+\end{alg}
+
+\subsection{Алгоритм Кнута-Морриса-Пратта.}
+
+\begin{alg}
+    Строка $w$ читается слева направо, и после чтения $i$ символов $w$ он помнит длину $j$ самого длинного префикса строки $x$, на которой заканчивается $a_1 \ldots a_i$ - то есть, наибольшее число $j$, для которого верно $a_{i-j+1}\ldots a_i=b_1\ldots b_j$. \ 
+
+    При чтении очередного символа $a_{i+1}$ алгоритм сравнивает его с $b_{j+1}$, и если эти символы равны, это значит, что префикс $x$ длины $j$ продлевается на один символ. Если же $a_{i+1}\neq b_{j+1}$, то самый длинный префикс $x$, на который заканчивается строка $a_1\ldots a_{i+1}$, будет содержать строго меньше, чем $j+1$ символов. Чтобы найти длину этого префикса, нужно рассмотреть следующий по длине префикс $x$ на который заканчивается $a_1\ldots a_i$, и пытаться продлевать уже его. \ 
+
+    Чтобы иметь возможность находить длину такого префикса, алгоритм заранее строит по данной искомой строке $x$ определённую стуктуру данных - \textit{префиксную сумму}.
+\end{alg}
+
+\begin{defn}
+    \textit{Префиксная сумма} для строки $x=b_1\ldots b_m$ - это функция $\pi\{1, \ldots, m\}\rightarrow \{0, \ldots, m-1\}$, которая для всякого префикса $b_1\ldots b_i$ строки $x$ выдаёт длину наибольшего суффикса подстроки $b_1\ldots b_i$, который также является префиксом $x$. 
+    \[
+        \pi(i)=\max\{j|j<i, b_1\ldots b_j = b_{i-j+1}\ldots b_i\} 
+    \]
+\end{defn}
+
+\begin{remark}
+    Повторно применяя функцию $\pi$ можно получить все префиксы $x$, являющиеся суффиксами $b_1\ldots b_i$, и алгоритм будет их перебирать, пока не найдёт такой, который можно продолжить следующим символом текста. 
+\end{remark}
+
+\begin{stat}
+    Имея готовую таблицу значений функции $\pi$, алгоритм KMP работает за время $\Theta(n)$. 
+\end{stat}
+
+\begin{remark}
+    Осталось научиться быстро строить значение префиксной функции.
+\end{remark}
+
+\subsection{Поиск с помощью конечных автоматов.}
+
+\begin{defn}
+    \textit{Детермированный конечный автомат (DFA)} - пятёрка $A=(\Sigma, Q, q_0, \delta, F)$, со следующим значением компонентов:
+    
+    \begin{itemize}
+        \item $\Sigma$ - алфавит; 
+        \item $Q$ - конечное множество состояний; 
+        \item $q_0\in Q$ - начальное состояние; 
+        \item $\delta:Q\times \Sigma \rightarrow Q$ - функция переходов. Если автомат находится в состоянии $q\in Q$ и читает символ $a\in \Sigma$, то его следующее состояние - $\delta(q, a)$; 
+        \item $F\subseteq Q$ - множество \textit{принимающих состояний}.
+    \end{itemize}
+
+    Для всякой входной строки $w=a_1\ldots a_l$, где $l\geq 0$ и $a_1, \ldots, a_l\in \Sigma$, вычисление - последовательность состояний $p_0 \ldots, p_{l-1, p_l}$, где $p_0=q_0$, и всякое следующее состояние $p_i$, где $i\in\{1, \ldots, l\}$, однозначно определено как $p_i=\delta(p_{i-1}, a_i)$. 
+    \[
+        p_0\rightarrow^{a_1}p_1\rightarrow^{a_1}\ldots \rightarrow^{a_l} p_l
+    \]
+
+    Строка \textit{принимается}, если последнее состоение $p_l$ принадлежит множеству $F$ - иначе \textit{отвергается}. Множество строк, \textit{распознаваемое} автоматом, обозначаемое через $L(A)$ - состоит из всех строк, которые он принимает.
+\end{defn}
+
+\begin{theorem}
+    Для всякой строки $x=b_1\ldots b_m$ над алфавитом $\Sigma$ существует DFA с $m+1$ состояниями, распознающий множество $\Sigma^* x$ всех строк, заканчивающихся на $x$, и этот DFA можно построить за время $\Theta(|\Sigma|\cdot m)$. 
+\end{theorem}
+
+\begin{proof}
+    Пока что записывать не буду.
+\end{proof}
+
+\subsection{Представления множеств строк.}
+
+\begin{alg}
+    \textit{Лексикографический порядок.} Поэлементное сравнение слева направо.
+\end{alg}
+
+\begin{prob}
+    Как хранить строки?
+\end{prob}
+
+\begin{alg}
+    В виде списка или двоичного дерева поиска, однако это всё хуйня.
+\end{alg} \ 
+
+\begin{alg}
+    \textbf{Префиксное дерево} - структура для хранения множеств строк. Корневое дерево с дугами, помеченными символами алфавита. Дуги, исходящие ииз всякой вершины, должны быть помечены различными символами. Каждая вершина соответствует некоторой строке, которая хранится неявно в виде последовательности дуг на пути к ней. Также всякая вершина хранит один бит информации, принадлежит ли эта строка ммножеству; вместе с битом можно хранить любые дополнительные значения, сопоставленный в этой строке. Корень соответствует пустой строке. Если вершина соответствует строке $w$, и исходящая из неё дуга помечена символом $a\in \Sigma$, то эта дуга идёт в вершину, соответствующую строке $wa$. \ 
+
+    Все операции с любой данной строкой длины $l$ (поиск, вставка, удаление) выолняются за время $O(l)$, не зависящее от числа элементов в хранимом множестве. \ 
+
+    \textit{Компактное префиксное дерево} - объединяем несколько дуг в одну, если они идут одинаково параллельно.
+\end{alg}
+
+\begin{stat}
+    В компактном префиксном дереве для множества из $n$ элементов не более, чем $n$ внутренних вершин.
+\end{stat}
+
+\subsection{Поиск нескольких строк одновременно: алгоритм Ахо-Корасик.}
+
+\begin{prob}
+    Пусть для данного текста нужно найти все вхождения не одной строки, а всех строк из конечного множества $K=\{x_1, \ldots, x_k\}$. 
+\end{prob}
+
+\begin{alg}
+    \textbf{Алгоритм Ахо-Корасик.} Данный алгоритм будет помнить самый длинный только что прочитанный префикс одной из строк $x_1, \ldots, x_k$, а точнее сказать, самую длинную такую строку $u$, что $u$ - префикс какой-то строки из $K$, и алгоритм только что прочитал $u$. 
+\end{alg}
+
+\begin{remark}
+    Для решения обобщается префиксная сумма и построение функции $\pi$ (работающее за линейное время), но пока что упущу подробности.
+\end{remark}
+
+\subsection{Суффиксные деревья.}
+
+\begin{alg}
+    \textbf{Суффиксное дерево} - структура данных, строящаяся по данной строке и обеспечивающая эффективный поиск подстрок в этой строке. Понятно, что это такое.  
 \end{alg}
 
 \end{document}
