okhotin-full(almost)

--- a/lekcii/algorythmes.tex
+++ b/lekcii/algorythmes.tex
@@ -809,4 +809,46 @@
     \textbf{Суффиксное дерево} - структура данных, строящаяся по данной строке и обеспечивающая эффективный поиск подстрок в этой строке. Понятно, что это такое.  
 \end{alg}
 
+\section{Лекция 9.}
+
+\subsection{Сжатие данных, основанное на повторении строк.}
+
+\begin{prob}
+    Нужно научиться использовать часто повторяющиеся подстроки, чтоы хранить их отдельно в памяти и эффективно использовать при хранении целого текста.
+\end{prob}
+
+\begin{alg}
+    \textbf{Метод Лемпеля-Зива LZ77.} Алгоритм сжатия данных, использующий повторяемость подстрок. Основная идея в том, что каждый раз, когда ранее прочитанная подстрока встречается повторно, алгоритм пишет вместо неё ссылку на предыдущее вхождение. На каждом шаге выводится тройка $(d, l, a)$, что означает: сперва повторяется подстрока длины $l$, ранее встречавшаяся $d$ символов назад, а потом идёт символ $a$. Реализуется самым простым образом через суффиксное дерево, в котором на каждом шаге читаются следующие символы входной строки, пока не находится самая длинная раньше встречавшаяся подстрока. Обычно используется небольшое улучшение - \textit{''скользящее окно''}, то есть, подстроки ищутся (тем же суффиксным деревом, скорее всего) в окне из последних $m$ элементов, а остальные забываются.
+\end{alg} \ 
+
+\begin{theorem}
+    Жадный LZ77 оптимален.
+\end{theorem} \ 
+
+\begin{alg}
+    \textbf{Метод Лемпеля-Зива LZ78.} Тут уже по мере чтения строки строится словарь из часто встречающихся строк в виде префиксного дерева. При декодировании строится в точности этот же словарь. В сжатом представлении строки словарь не хранится. \ 
+
+    В начале в словаре содержится только один элемент под номером нуль: $T_0=\varepsilon$, иными словами, префиксное дерево состоит из корня, помеченного номером 0. На каждом шаге читается самая длинная строка $T_j=v$, и уже имеющаяся в словаре, и выводится её код $j$; также читается и выводится следующий символ $a$. При этом в словарь добавляется новая трока $va$ - конкатенация только что прочитанной со следующим входным символом. \ 
+
+    На префиксном дереве это выглядит так: после вывода очередной пары $(j, a)$ алгоритм переходит в корень префиксного дерева, и дальше читает столько входных символов, сколько возможно. Когда очередной символ прочитать нельзя, создаётся новый лист, при этом выводится номер предыдущей вершины и прочитанный символ. \ 
+
+    При декодировании строится то же самое префиксное дерево. Алгоритму при этом потребуется находить строку по номеру в таблице: можно, например, завести для этого отдельный массиы строк, или же читать в префиксном дереве путь из вершины в корень. Прочитав очередную пару $(j, a)$ алгоритм выводит строку $T_j$ и символ $a$, после чего сразу перескакивает в вершину $j$ и присоединяет к ней новый лист, с переходом по символу $a$. 
+\end{alg} \ 
+
+\begin{alg}
+    \textbf{Преобразование Берроуза-Вилера.} Перутся все циклические сдвиги строки $w=a_1\ldots a_n$. Они сортируются лексикографически, получается таблица $T$ размера $n\times n$, где в каждой строчке - один из циклических сдвигов. наконец, берётся последовательность последних символов $b_1\ldots b_n$ в таблице $T$ и номер $t$ строки $w$ в этой таблице. \ 
+
+    Если в исходной строке какая-то подстрока $au$ часто повторялась, то есть много циклических сдвигов, начинающихся с $u$ и заканчивающихся на $a$, и после сортировки они окажутся рядом. Поэтому в преобразованной строке будут длинные последовательности повторяющихся символов. Использование в качестве метода сжатия данных: преобразовать, а потом применять другие методы к преобразованной строке. \ 
+
+    Утверждается, что по последовательности $b_i$, и $t$ восстанавливается исходная $w$. 
+\end{alg}
+
+\begin{stat}
+    BWT можно вычислить за линейное время.
+\end{stat}
+
+\begin{stat}
+    Обратное к BWT преобразование можно вычислить за линейное время.
+\end{stat}
+
 \end{document}
